# software-testing-project

./: .gitignore  README.md  pyproject.toml
configs/: evaluation_scenarios.yaml  expected_format.json  test_scenarios.yaml
configs/openai_schemas/: chat_completion.json  chat_completion_chunk.json
reports/: LLM_Analysis_v2.tex  comparative_report.html  comparison_report.html  inference_evaluation_report.md
src/: comparator.py  config_loader.py  consistency.py  html_reporter.py  llm_tester.py  load_runner.py  metrics.py  niah_runner.py  ramp_runner.py  reporter.py  stat_regression.py  validator.py
tests/: conftest.py  test_calibration.py  test_comparator.py  test_concurrency_isolation.py  test_config_loader.py  test_consistency.py  test_contract.py  test_determinism.py  test_differential.py  test_html_reporter.py  test_integration.py  test_load_runner.py  test_metrics.py  test_negative.py  test_param_honoring.py  test_properties.py  test_ramp_runner.py  test_reporter.py  test_stat_harness.py  test_stat_regression.py  test_streaming_protocol.py  test_validator.py
